[weather bbcukmet] Update to BBC's new json-based search and modified xml

BUG:330773